--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
+    "@sweetalert2/themes": "^3.2.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "sass-loader": "^9.0.3",
+    "save": "^2.4.0",
+    "sweetalert2": "^9.17.1",
+    "vue": "^3.0.0-beta.1",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
-    "vuex": "^3.4.0"
+    "vuex": "^4.0.0-alpha.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -22,10 +30,12 @@
     "@vue/cli-plugin-typescript": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^7.0.0-alpha.0",
+    "sass": "^1.26.10",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vue-next": "~0.1.3"
   }
 }
